[package]
name = "find-eat-price"
version = "0.1.0"
authors = ["damody <t1238142000@gmail.com>"]

[dependencies]
env_logger = "0.5"

actix = "0.7"
actix-web = "0.7"

futures = "0.1"
uuid = { version = "0.5", features = ["serde", "v4"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel-chrono-duration = "0.1"

diesel = { version = "^1.1.0", features = ["sqlite", "r2d2", "chrono"] }
r2d2 = "0.8"
r2d2-diesel = "1"
dotenv = "0.10"

[dependencies.chrono]
version = "0.4"
features = ["serde"]