[package]
name = "find-eat-price"
version = "0.1.0"
authors = ["damody <t1238142000@gmail.com>"]

[dependencies]
env_logger = "*"
bytes = "0.4"
actix = "0.7"
actix-web = "0.7"

futures = "0.1"
uuid = { version = "0.5", features = ["serde", "v4"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel-chrono-duration = "0.1"

r2d2 = "0.8"
r2d2-diesel = "1"
dotenv = "0.10"

[dependencies.diesel]
version = "1.3"
features = ["mysql", "chrono", "r2d2"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]